--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- </b>
+                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- From the moment</b>
                                     </p>
                                 </div>
                             </div>
