--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 style="font-size:3vh">Logic and Computation TA</h1>
+                                    <h1 style="font-size:4vh">Logic and Computation TA</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -95,7 +95,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class = "title">Lead Website Developer</h1>
+                                    <h1 style="font-size:4vh">Lead Website Developer</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -112,7 +112,7 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">Lead App Developer</h1>
+                                    <h1 style="font-size:4vh">Lead App Developer</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -137,7 +137,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class = "title">IT Intern</h1>
+                                    <h1 style="font-size:4vh">IT Intern</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -154,7 +154,7 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">Head Secretary</h1>
+                                    <h1 style="font-size:4vh">Head Secretary</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
