--- a/resume.html
+++ b/resume.html
@@ -84,7 +84,7 @@
                             <div>
                                 September 2021 - Present
                             </div>
-                            info info info
+                            Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                         </div>
                     </div>
                 </li>
@@ -100,7 +100,9 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        info on work experience in click on format button
+                                        Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
+                                        <br>Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
+                                        <br>Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.
                                     </p>
                                 </div>
                             </div>
@@ -117,7 +119,8 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                        Programmed/maintained a tablet application that would visually assist interventionists in explaining both American culture and family-strengthening concepts to Somali Bantu and Bhutanese refugees; reviewed by 40 Somali Bantu and 40 Bhutanese refugees and aimed towards aiding refugees from 20 different countries.
+                                        <br>Met weekly with the different teams (design, cultural, etc.) to implement the most intuitive and culturally/linguistically appropriate features for the client-facing app.
                                     </p>
                                 </div>
                             </div>
@@ -142,7 +145,8 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        info on work experience in click on format button
+                                        Engineered a hardware inventory tracking program which featured current inventory status, inventory change logs, and managed data distributed throughout all 39 of the company’s stores to eliminate information delay by at least 10 minutes when having to phone an employee to check manually.
+                                        <br>Assisted coworkers from a variety of teams with computer issues that arose from daily operation.
                                     </p>
                                 </div>
                             </div>
@@ -159,8 +163,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
-                                    </p>
+                                        Recorded and analyzed sales values through Microsoft Excel and offered feedback regarding customer habits to management.                                    </p>
                                 </div>
                             </div>
                         </div>
