--- a/resume.html
+++ b/resume.html
@@ -170,7 +170,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <div class="hide_p">
-                                <img src='LuckyStarLogo.png'  alt="" style="width=1%"/>
+                                <img src='LuckyStarLogo.png'  alt="" style="width:1%"/>
                             </div>
                         </div>
                     </div>
