--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
                                     <h1 style="font-size:4vh">Lead Website Developer</h1>
                                 </div>
                                 <div class="container_outer_img">
-                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize"/>
+                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="250px"/>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                     <h1 style="font-size:4vh">Lead App Developer</h1>
                                 </div>
                                 <div class="hide_p">
-                                    <img src='RPCALogo.jpg'  alt="" style="width=150%"/>
+                                    <img src='RPCALogo.jpg'  alt="" width="250px"/>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                                     <h1 style="font-size:4vh">IT Intern</h1>
                                 </div>
                                 <div class="container_outer_img">
-                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize"/>
+                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" width="250px"/>
                                 </div>
                             </div>
                         </div>
