--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
                         <div class="container_outer_img">
                             <div>
                                 September 2021 - Present
-                            </div style="font-size:1vh">
+                            </div style="font-size:20px">
                                 Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                         </div>
                     </div>
