--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
                 <li class="snap">
                     <div class= 'container'>
                         <div class="hide_p">
-                            <p class="p">
+                            <p class="p" style="font-size:20px; center:left">
                                 Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
                                 <br>Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
                                 <br>Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.
