--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> RPCA
+                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> This program was created using HTML, CSS, and JavaScript on React Native. The challenge for this program was trying to organize the plethora of pages in cohesive files as most of the project itself was content based rather than required rigorous programming algorithms. However, it still necessitated an easy-to-follow format which resulted in the demo seen on the right.
                                     </p>
                                 </div>
                             </div>
