--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)-</b> D!ng 
+                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was invited to be a part of a startup whose main purpose was to gather all of a single peron's social media account onto one platform. In sort, the ultimate social media platform that would tie social media to the person rather than the person to the social media. I was given a task to create a homepage for the group that would be more aesthetic than a static wix webpage, so I took the liberty to constatly alternate images on the screen and implement many transitions which would never bore the eyes. This project taught me a lot of web hosting and the market for domain names using GoDaddy and Cpanel. This project requried HTML, CSS, and JavaScript. https://connecding.com/aboutus/
                                     </p>
                                 </div>
                             </div>
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> D!ng
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, 
                                     </p>
                                 </div>
                             </div>
