--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, 
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to essentially replicate many of the messaging, postng, commenting, and liking functions that many established social medias offer while also orgaanizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversations so that they are able to be sent throguh the system or something.
                                     </p>
                                 </div>
                             </div>
