--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- Built during my first full time internship at AAO, the program utilized HTML, CSS, JavaScript, Python, Flask, and sqlite3 to store and retrieve inventory data easily with intuitive GUI. It came with extra features such as color indicators for low stock, a history of who added/deleted from which account, among the flexibility of being able to add many other locations.</b>
+                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- </b>Built during my first full time internship at AAO, the program utilized HTML, CSS, JavaScript, Python, Flask, and sqlite3 to store and retrieve inventory data easily with intuitive GUI. It came with extra features such as color indicators for low stock, a history of who added/deleted from which account, among the flexibility of being able to add many other locations.</b>
                                     </p>
                                 </div>
                             </div>
