--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was invited to be a part of a startup whose main purpose was to gather all of a single peron's social media account onto one platform. In sort, the ultimate social media platform that would tie social media to the person rather than the person to the social media. I was given a task to create a homepage for the group that would be more aesthetic than a static wix webpage, so I took the liberty to constatly alternate images on the screen and implement many transitions which would never bore the eyes. This project taught me a lot of web hosting and the market for domain names using GoDaddy and Cpanel. This project requried HTML, CSS, and JavaScript. https://connecding.com/aboutus/
+                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was invited to be part of a startup whose business idea revolved around organizing all of a person’s social media presence into one organizational app. I was given the task of creating a homepage for the group, so I took the liberty to make it fun and introduce new images to the screen and implement smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. https://connecding.com/aboutus/
                                     </p>
                                 </div>
                             </div>
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to essentially replicate many of the messaging, postng, commenting, and liking functions that many established social medias offer while also orgaanizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversations so that they are able to be sent throguh the system or something.
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
                                     </p>
                                 </div>
                             </div>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> This program was created using HTML, CSS, and JavaScript on React Native. The challenge for this program was trying to organize the plethora of pages in cohesive files as most of the project itself was content based rather than required rigorous programming algorithms. However, it still necessitated an easy-to-follow format which resulted in the demo seen on the right.
+                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> This program was created using HTML, CSS, and JavaScript on React Native. The challenge for this program was trying to organize the plethora of pages in organized files as most of the project was filled with (word) content rather than shorter, rigorous programming algorithms. It still necessitated an easy-to-follow format which resulted in the demo seen on the right.
                                     </p>
                                 </div>
                             </div>
