--- a/resume.html
+++ b/resume.html
@@ -109,6 +109,33 @@
                         </div>
                     </div>
                 </li>
+
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class="title" style="font-size:4vh">Logic and Computation TA</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <img src='BCLogo.jpeg'  alt="" width="250px"/>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container_outer_img">
+                            <div>
+                                September 2021 - Present
+                            </div style="font-size:20px; center:left">
+                                Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                        </div>
+                    </div>
+                </li>
+
+
+
+
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_content">
