--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href = "styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
-
+        <link rel="icon" type="image/png" href="tabicon.png">
     </head>
     <body>
         <div>
