--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was invited to be part of a startup whose business idea revolved around organizing all of a person’s social media presence into one organizational app. I was given the task of creating a homepage for the group, so I took the liberty to make it fun and introduce new images to the screen and implement smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. Check it out yourself! -> https://connecding.com/aboutus/
+                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was invited to be part of a startup whose business idea revolved around organizing all of a person's social media presence into one organizational app. I was given the task of creating a homepage for the group, so I took the liberty to make it fun and introduce new images to the screen and implement smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. Check it out yourself! -> https://connecding.com/aboutus/
                                     </p>
                                 </div>
                             </div>
