--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was given the task of creating a homepage for our social media startup so I took the liberty to make it fun by continuously introducing new images to the screen and implementing smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. Check it out yourself! -> https://connecding.com/aboutus/
+                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was given the task of creating a homepage for our social media startup so I took the liberty to make it fun by continuously introducing new images to the screen and implementing smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. Check it out yourself! -> <a href="https://connecding.com/aboutus/">https://connecding.com/aboutus/</a>
                                     </p>
                                 </div>
                             </div>
