--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias already offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
                                     </p>
                                 </div>
                             </div>
