--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@
                         <div class="container_outer_img">
                             <div>
                                 September 2021 - Present
-                            </div style="font-size:12px; center:left">
+                            </div style="font-size:12px; text-align:left">
                                 Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                         </div>
                     </div>
