--- a/resume.html
+++ b/resume.html
@@ -81,9 +81,11 @@
                             </div>
                         </div>
                         <div>
-                            September 2021 - Present
-                        </div style="font-size:12px; text-align:left">
-                            Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                            <div>
+                                September 2021 - Present
+                            </div style="font-size:12px; text-align:left">
+                                Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                        </div>
                     </div>
                 </li>
                 <li class="snap">
