--- a/resume.html
+++ b/resume.html
@@ -80,10 +80,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div style="font-size:8px; text-align:left">
                             <div>
                                 September 2021 - Present
-                            </div style="font-size:12px; text-align:left">
+                            </div>
                                 Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                         </div>
                     </div>
