--- a/resume.html
+++ b/resume.html
@@ -73,18 +73,16 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Logic and Computation TA</h1>
                                 </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        <img src='BCLogo.jpeg'  alt="" width="250px"/>
-                                    </p>
-                                </div>
+                                <p class="p">
+                                    <img src='BCLogo.jpeg'  alt="" width="250px"/>
+                                </p>
                             </div>
                         </div>
                         <div style="font-size:8px; text-align:left">
                             <div>
                                 September 2021 - Present
                             </div>
-                                Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
+                                - Assisted and facilitated the learning of 100+ students, instructing them on questions with homework while also hosting weekly lab sessions where I explained specific course concepts ranging from logic gates to Turing machines.
                         </div>
                     </div>
                 </li>
