--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class="title" style="font-size:3vh">Logic and Computation TA</h1>
+                                    <h1 class="title" style="font-size:3vh">Computer Science 1 &ampersand; Logic and Computation TA</h1>
                                 </div>
                                 <p class="p">
                                     <img src='BCLogo.jpeg'  alt="" width="250px"/>
