--- a/resume.html
+++ b/resume.html
@@ -71,14 +71,14 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class="title" style="font-size:3vh">Computer Science 1 &ampersand; Logic and Computation TA</h1>
+                                    <h1 class="title" style="font-size:3vh">Computer Science I &amp; Logic and Computation TA</h1>
                                 </div>
                                 <p class="p">
                                     <img src='BCLogo.jpeg'  alt="" width="250px"/>
                                 </p>
                             </div>
                         </div>
-                        <div style="font-size:8px; text-align:left">
+                        <div style="font-size:16px; text-align:left">
                             <div>
                                 September 2021 - Present
                             </div>
