--- a/resume.html
+++ b/resume.html
@@ -86,6 +86,30 @@
                         </div>
                     </div>
                 </li>
+
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class="title" style="font-size:3vh">Lead Website Developer</h1>
+                                </div>
+                                <p class="p">
+                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="1000px"/>
+                                </p>
+                            </div>
+                        </div>
+                        <div style="font-size:16px; text-align:left">
+                            <div>
+                                June 2021 - December 2021
+                            </div>
+                                Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
+                                <br>Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
+                                <br>Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.                        
+                            </div>
+                    </div>
+                </li>
+
                 <li class="snap">
                     <div class= 'container'>
                         <div class="hide_p">
