--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
                                     <h1 class="title" style="font-size:3vh">Lead Website Developer</h1>
                                 </div>
                                 <p class="p">
-                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" width="1000px"/>
+                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:1000px"/>
                                 </p>
                             </div>
                         </div>
@@ -102,17 +102,33 @@
                             <div>
                                 June 2021 - December 2021
                             </div>
-                                Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
-                                <br>Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
-                                <br>Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.                        
+                                - Designed and built out a client to fetch updated data from our API using WebSocket to provide 50+ users with real-time messages, notifications, etc. on a page click or a page refresh.
+                                <br>- Implemented a separate program to create an interactive homepage using transitions to guide the user through the product, about us, contact, and ambassador application page.
+                                <br>- Facilitated and recorded focus groups where we gathered and implemented suggestions on new or current features such as scroll indicators to make certain functions more intuitive.                        
                             </div>
                     </div>
                 </li>
-
-
-
-
-
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class="title" style="font-size:3vh">Lead App Developer</h1>
+                                </div>
+                                <p class="p">
+                                    <img src='RPCALogo.jpg'  alt="" width="250px"/>
+                                </p>
+                            </div>
+                        </div>
+                        <div style="font-size:16px; text-align:left">
+                            <div>
+                                September 2021 - Present
+                            </div>
+                                - Programmed/maintained a tablet application that would visually assist interventionists in explaining both American culture and family-strengthening concepts to Somali Bantu and Bhutanese refugees; reviewed by 40 Somali Bantu and 40 Bhutanese refugees and aimed towards aiding refugees from 20 different countries.
+                                <br>- Met weekly with the different teams (design, cultural, etc.) to implement the most intuitive and culturally/linguistically appropriate features for the client-facing app.
+                            </div>
+                    </div>
+                </li>
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_content">
