--- a/resume.html
+++ b/resume.html
@@ -129,51 +129,28 @@
                             </div>
                     </div>
                 </li>
-                
                 <li class="snap">
-                    <div class= 'container off'>
+                    <div class= 'container'>
                         <div class="container_content">
                             <div class="container_content_inner">
-                                <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 style="font-size:4vh">Lead App Developer</h1>
+                                    <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
-                                <div class="hide_p">
-                                    <img src='RPCALogo.jpg'  alt="" width="250px"/>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Image-->
-                        <div class="container_outer_img">
-                            <div class="hide_p">
                                 <p class="p">
-                                    Programmed/maintained a tablet application that would visually assist interventionists in explaining both American culture and family-strengthening concepts to Somali Bantu and Bhutanese refugees; reviewed by 40 Somali Bantu and 40 Bhutanese refugees and aimed towards aiding refugees from 20 different countries.
-                                    <br>Met weekly with the different teams (design, cultural, etc.) to implement the most intuitive and culturally/linguistically appropriate features for the client-facing app.
+                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" width="1000px"/>
                                 </p>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="snap">
-                    <div class= 'container'>
-                        <div class="hide_p">
-                            <p class="p">
-                                Engineered a hardware inventory tracking program which featured current inventory status, inventory change logs, and managed data distributed throughout all 39 of the company’s stores to eliminate information delay by at least 10 minutes when having to phone an employee to check manually.
-                                <br>Assisted coworkers from a variety of teams with computer issues that arose from daily operation.
-                            </p>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 style="font-size:4vh">IT Intern</h1>
-                                </div>
-                                <div class="container_outer_img">
-                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" width="1000px"/>
-                                </div>
+                        <div style="font-size:16px; text-align:left">
+                            <div>
+                                June 2021 - December 2021
                             </div>
-                        </div>
+                                - Engineered a hardware inventory tracking program which featured current inventory status, inventory change logs, and managed data distributed throughout all 39 of the company’s stores to eliminate information delay by at least 10 minutes when having to phone an employee to check manually.
+                                <br>- Assisted coworkers from a variety of teams with computer issues that arose from daily operation.                            
+                            </div>
                     </div>
                 </li>
+
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_content">
