--- a/resume.html
+++ b/resume.html
@@ -140,7 +140,7 @@
                                     <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
                                 <p class="p">
-                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" width="1000px"/>
+                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
                                 </p>
                             </div>
                         </div>
