--- a/resume.html
+++ b/resume.html
@@ -162,7 +162,7 @@
                                     <h1 class="title" style="font-size:3vh">Head Secretary</h1>
                                 </div>
                                 <p class="p">
-                                    <img src='LuckyStarLogo.png'  alt="" width="200px"/>
+                                    <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
                                 </p>
                             </div>
                         </div>
