--- a/resume.html
+++ b/resume.html
@@ -139,9 +139,11 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
-                                <p class="p">
-                                    <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px"/>
-                                </p>
+                                <div style="height:200px; overflow:hidden;">
+                                    <p class="p">
+                                        <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px"/>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div style="font-size:16px; text-align:left">
