--- a/resume.html
+++ b/resume.html
@@ -139,7 +139,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
-                                <div style="height:200px; overflow:hidden;">
+                                <div style="height:200px; width:250px; overflow:hidden; background-color:red;">
                                     <p class="p">
                                         <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px"/>
                                     </p>
