--- a/resume.html
+++ b/resume.html
@@ -73,9 +73,11 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Computer Science I &amp; Logic and Computation TA</h1>
                                 </div>
-                                <p class="p">
-                                    <img src='BCLogo.jpeg'  alt="" width="250px"/>
-                                </p>
+                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                    <p class="p">
+                                        <img src='BCLogo.jpeg'  alt="" width="250px"/>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div style="font-size:16px; text-align:left">
@@ -94,9 +96,11 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Lead Website Developer</h1>
                                 </div>
-                                <p class="p">
-                                    <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
-                                </p>
+                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                    <p class="p">
+                                        <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div style="font-size:16px; text-align:left">
@@ -117,9 +121,11 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Lead App Developer</h1>
                                 </div>
-                                <p class="p">
-                                    <img src='RPCALogo.jpg'  alt="" width="250px"/>
-                                </p>
+                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                    <p class="p">
+                                        <img src='RPCALogo.jpg'  alt="" width="250px"/>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div style="font-size:16px; text-align:left">
@@ -163,9 +169,11 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Head Secretary</h1>
                                 </div>
-                                <p class="p">
-                                    <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
-                                </p>
+                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                    <p class="p">
+                                        <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                         <div style="font-size:16px; text-align:left">
