--- a/resume.html
+++ b/resume.html
@@ -147,7 +147,7 @@
                                 </div>
                                 <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
                                     <p class="p">
-                                        <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px"/>
+                                        <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px; margin-top:-50px;"/>
                                     </p>
                                 </div>
                             </div>
