--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Computer Science I &amp; Logic and Computation TA</h1>
                                 </div>
-                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                <div style="height:100px; width:300px; overflow:hidden;">
                                     <p class="p">
                                         <img src='BCLogo.jpeg'  alt="" width="250px"/>
                                     </p>
@@ -96,7 +96,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Lead Website Developer</h1>
                                 </div>
-                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                <div style="height:100px; width:300px; overflow:hidden;">
                                     <p class="p">
                                         <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize" style="width:250px"/>
                                     </p>
@@ -121,7 +121,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Lead App Developer</h1>
                                 </div>
-                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                <div style="height:100px; width:300px; overflow:hidden;">
                                     <p class="p">
                                         <img src='RPCALogo.jpg'  alt="" width="250px"/>
                                     </p>
@@ -145,7 +145,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">IT Intern</h1>
                                 </div>
-                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                <div style="height:100px; width:300px; overflow:hidden;">
                                     <p class="p">
                                         <img src='AAOLogo.png'  alt="" class="container_img picture_resize" style="width:200px; margin-top:-50px;"/>
                                     </p>
@@ -169,7 +169,7 @@
                                 <div class="hide_title">
                                     <h1 class="title" style="font-size:3vh">Head Secretary</h1>
                                 </div>
-                                <div style="height:100px; width:300px; overflow:hidden; background-color:red;">
+                                <div style="height:100px; width:300px; overflow:hidden;">
                                     <p class="p">
                                         <img src='LuckyStarLogo.png'  alt="" style="width:200px"/>
                                     </p>
