--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                                     <h1 class = "title">About Me</h1>
                                 </div>
                                 <div class="hide_p">
-                                    <p class="p" style="font-size: 2px">
+                                    <p class="p" style="font-size: 3vh">
                                         Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
                                     </p>
                                 </div>
