--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,6 @@
                     <div class= 'container'>
                         <div class="container_content">
                             <div class="container_content_inner">
-                                <!--Title with text-->
                                 <div class="hide_title">
                                     <h1 class = "title">Tetris</h1>
                                 </div>
@@ -143,9 +142,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!--Image-->
                         <div class="container_outer_img">
-                            <video width="400" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="tetris.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
